--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://eurekaliu.github.io/reactproj/my-app/public",
+  "homepage": "https://eurekaliu.github.io/reactproj/",
   "dependencies": {
     "@antv/data-set": "^0.9.5",
     "@antv/g2": "^3.2.7",
@@ -15,9 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "devDependencies": {
     "gh-pages": "^1.2.0"
